<resources>
    <string name="app_name">BloodHound</string>

    <string name="description">Tell BloodHound Where you Are!!</string>

    <string-array name="location_providers">
        <item>GPS</item>
        <item>Bluetooth</item>
        <item>RFID</item>
    </string-array>

    <string name="get_location">Get Coordinates</string>
    <string name="location_permission_granted">Location permission granted</string>
    <string name="location_access_required">Location access required</string>
    <string name="ok">OK</string>

    <string name="location_description">Description</string>
    <string name="location_name">Name</string>

    <string name="location_unavailable">Location unavailable</string>
    <string name="weather_info_detail_txt">Temperature</string>
    <string name="temperature_detail">20 Degrees</string>
    <string name="add_location">Add Location</string>

    <string name="add">Add Location</string>
    <string name="save">Save Data</string>
    <string name="cancel">Cancel</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="location_state">State</string>
    <string name="gps_coordinates">GPS Coordinates</string>

    <string name="edit_location">Edit Location</string>
    <string name="location_details">Location Details</string>
    <string name="timestamp">Date 01/01/2020 11 am</string>
    <string name="coordinates">Coordinates</string>
    <string name="weather_icon">Weather icon</string>
    <string name="tap_to_get_the_weather">Tap to get the weather</string>

</resources>
