<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewmodel"
            type="com.example.houndlocation.util.viewmodel.AddEditLocationViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:id="@+id/root"
        android:layout_height="match_parent"
        tools:context=".ui.AddEditLocationActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="24dp"
                android:paddingStart="24dp"
                android:orientation="vertical"
                android:paddingTop="56dp">

                <LinearLayout
                    android:id="@+id/header"
                    android:orientation="vertical"
                    android:background="@color/colorPrimary"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_gravity="center"
                        android:src="@drawable/get_location"
                        android:layout_width="70dp"
                        android:layout_height="70dp" />

                    <TextView
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:gravity="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/large_text"
                        android:paddingLeft="35dp"
                        android:paddingRight="35dp"
                        android:text="@string/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/location_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewmodel.locationNameEditText}"
                        android:hint="@string/location_name"
                        android:inputType="text"
                        android:textSize="18sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/location_desc"
                        android:layout_width="match_parent"
                        android:text="@={viewmodel.locationDescEditText}"
                        android:layout_height="wrap_content"
                        android:hint="@string/location_description" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/gps_coordinates"
                    android:textSize="16sp"
                    android:textStyle="bold"/>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/longTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/longitude_textView"
                        android:layout_width="match_parent"
                        android:inputType="numberDecimal"
                        android:text="@={viewmodel.longitudeEditText}"
                        android:layout_height="match_parent"
                        android:hint="@string/longitude" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/longTextInputLayout"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/latitude_textView"
                        android:layout_width="match_parent"
                        android:inputType="numberDecimal"
                        android:text="@={viewmodel.latitudeEditText}"
                        android:layout_height="match_parent"
                        android:hint="@string/latitude" />
                </com.google.android.material.textfield.TextInputLayout>
                <Spinner
                    android:id="@+id/location_provider_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:minHeight="40dp"
                    android:layout_gravity="center_horizontal"
                    android:entries="@array/location_providers"
                    android:spinnerMode="dropdown"
                    android:selectedItemPosition="@={viewmodel.selectedItemPosition}"
                    android:onItemSelected="@{(parent,view,pos,id)->viewmodel.onSelectItem(parent,view,pos,id)}"
                    />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/location_state_switch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:checked="@={viewmodel.checkedSwitch}"
                    android:paddingTop="4dp"
                    app:nullValue="@{false}"
                    android:paddingBottom="4dp"
                    android:text="@string/location_state"
                    android:textColor="#5D5D5D"
                    android:textSize="14sp" />


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:id="@+id/btnGetlocation"
                    android:background="@color/colorAccent"
                    android:text="@string/get_location"
                    android:drawableStart="@drawable/ic_my_location_black_24dp"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="48dp"
                    android:layout_marginBottom="8dp"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/cancelButton"
                                               android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/cancel"
                        android:onClick="@{()->viewmodel.cancelUpdate()}"
                        app:layout_constraintEnd_toStartOf="@+id/addLocationButton"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/addLocationButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:onClick="@{()-> viewmodel.saveLocation()}"
                        android:layout_marginTop="4dp"
                        android:background="@color/colorPrimary"
                        android:text="@string/save"
                        android:textColor="@android:color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.503"
                        app:layout_constraintStart_toEndOf="@+id/cancelButton"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>



        </ScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>